--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <h2 class="title-sidebar">Sidebar</h2>
         </aside>
         <section class="content">
-            <img src="img/orange.png" alt="image" class=" item orange">
-            <img src="img/laptop.png" alt="image" class="item laptop">
-            <img src="img/field.png" alt="image" class="item field">
-            <img src="img/flower.png" alt="image" class="item flower">
-            <img src="img/most.png" alt="image" class="item most">
-            <img src="img/desk.png" alt="image" class="item desk">
-            <img src="img/sun.png" alt="image" class="item sun">
+            <img src="img/orange.png" alt="image">
+            <img src="img/laptop.png" alt="image">
+            <img src="img/field.png" alt="image">
+            <img src="img/flower.png" alt="image">
+            <img src="img/most.png" alt="image">
+            <img src="img/desk.png" alt="image">
+            <img src="img/sun.png" alt="image">
         </section>
         <footer class="footer">
             <h2>Footer</h2>
